# Multicore-OoO-sim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  RUNNING.md  STATUS.md  TRACES.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml
cmake/: Dependencies.cmake
configs/: baseline.json  sweep.json
docs/: architecture.md  benchmarks.md  index.md  log-format.md  trace-format.md  tracing.md
docs/overview/: architecture.md  benchmarks.md  status.md
docs/report/: 00-overview.md  01-phase0-skeleton.md  02-phase1-traces.md  03-phase2-cache.md  04-phase3-predictor.md  05-tools-and-libraries.md  06-phase4-review.md  07-phase5a-coherence.md  08-phase5b-full.md  09-config-sweep.md  10-lls-hybrid-coherence.md  11-validation-bugs.md  12-heterogeneous-traces.md  13-log-mode-and-rpt-split.md  14-writeback-and-private-synth.md  15-baseline-characterization.md  16-real-trace-deadlock-rootcause.md  17-heterogeneous-real-mix-results.md  18-lls-study-guide.md  code-review.md  index.md
docs/study/: index.md
docs/usage/: running.md  traces.md  tracing.md
include/comparch/: cli.hpp  config.hpp  log.hpp  program_manifest.hpp  sync_coordinator.hpp  trace.hpp  version.hpp
include/comparch/cache/: cache.hpp  cache_mode.hpp  cache_stats.hpp  coherence_sink.hpp  main_memory.hpp  mem_req.hpp  mshr.hpp  prefetcher.hpp  prefetcher_hybrid.hpp  prefetcher_markov.hpp  prefetcher_plus_one.hpp  replacement.hpp  write_policy.hpp
include/comparch/coherence/: agent.hpp  agent_mesi.hpp  agent_mi.hpp  agent_moesif.hpp  agent_mosi.hpp  agent_msi.hpp  coherence.hpp  coherence_adapter.hpp  coherence_cache.hpp  coherence_mode.hpp  coherence_stats.hpp  cpu_port.hpp  directory.hpp  factory.hpp  fici_cpu.hpp  lls_cache.hpp  message.hpp  network.hpp  node.hpp  settings.hpp  types.hpp
include/comparch/core/: node.hpp
include/comparch/full/: full_mode.hpp
include/comparch/ooo/: core.hpp  fu.hpp  inst.hpp  ooo_mode.hpp  rat.hpp  rob.hpp  schedq.hpp  trace_logger.hpp
include/comparch/predictor/: predictor.hpp  predictor_mode.hpp  saturating_counter.hpp
report/: 00-overview.md  02-phase1-traces.md  04-phase3-predictor.md  06-phase4-review.md  07-phase5a-coherence.md  08-phase5b-full.md  README.md  code-review.md
report_doc/: 00-overview.md  01-phase0-skeleton.md  02-phase1-traces.md  03-phase2-cache.md  05-tools-and-libraries.md  09-config-sweep.md  10-lls-hybrid-coherence.md  11-validation-bugs.md  12-heterogeneous-traces.md  13-log-mode-and-rpt-split.md  14-writeback-and-private-synth.md  15-baseline-characterization.md  16-real-trace-deadlock-rootcause.md  17-heterogeneous-real-mix-results.md  18-lls-study-guide.md
scripts/: aggregate.py  fetch_traces.sh  gen_synth.py  run_sweep.py  sanity_rules.py  sweep_matrix.py  validate_champsim.py
src/: CMakeLists.txt  main.cpp
src/cache/: CMakeLists.txt  cache.cpp  cache_mode.cpp  dummy.cpp  main_memory.cpp  mshr.cpp  prefetcher_hybrid.cpp  prefetcher_markov.cpp  prefetcher_plus_one.cpp  replacement.cpp  write_policy.cpp
src/coherence/: CMakeLists.txt  agent.cpp  agent_mesi.cpp  agent_mi.cpp  agent_moesif.cpp  agent_mosi.cpp  agent_msi.cpp  coherence_adapter.cpp  coherence_cache.cpp  coherence_mode.cpp  coherence_stats.cpp  directory.cpp  directory_mesi.cpp  directory_mi.cpp  directory_moesif.cpp  directory_mosi.cpp  directory_msi.cpp  dummy.cpp  factory.cpp  fici_cpu.cpp  lls_cache.cpp  message.cpp  network.cpp  node.cpp  settings.cpp
src/common/: CMakeLists.txt  cli.cpp  config.cpp  log.cpp  placeholder.cpp  program_manifest.cpp  sync_coordinator.cpp  trace.cpp
src/core/: CMakeLists.txt  dummy.cpp
src/full/: CMakeLists.txt  full_mode.cpp
src/ooo/: CMakeLists.txt  core.cpp  dummy.cpp  inst.cpp  ooo_mode.cpp  rat.cpp  rob.cpp  schedq.cpp  trace_logger.cpp
src/predictor/: CMakeLists.txt  always_taken.cpp  dummy.cpp  factory.cpp  hybrid.cpp  perceptron.cpp  predictor_mode.cpp  yeh_patt.cpp
tests/: CMakeLists.txt
tests/cache/: test_cache_basic.cpp  test_coherence_sink.cpp  test_l1_l2.cpp  test_l2_wbwa.cpp  test_mshr.cpp  test_prefetcher_hybrid.cpp  test_prefetcher_markov.cpp  test_prefetcher_plus_one.cpp  test_proj1_regression.cpp  test_replacement.cpp
tests/cache/fixtures/proj1/: short_gcc.trace  short_gcc_default.out  short_gcc_hybrid.out  short_gcc_markov.out  short_gcc_plus1.out
tests/coherence/: test_coherence_stats.cpp  test_fici_cpu.cpp  test_lls_cache.cpp  test_mi.cpp  test_network_basic.cpp  test_proj3_regression.cpp  test_writeback.cpp
tests/coherence/fixtures/proj3/: README.md
tests/coherence/fixtures/proj3/ref_outs/: MESI_core_12.out  MESI_core_16.out  MESI_core_4.out  MESI_core_8.out  MOESIF_core_12.out  MOESIF_core_16.out  MOESIF_core_4.out  MOESIF_core_8.out  MOSI_core_12.out  MOSI_core_16.out  MOSI_core_4.out  MOSI_core_8.out  MSI_core_12.out  MSI_core_16.out  MSI_core_4.out  MSI_core_8.out
tests/coherence/fixtures/proj3/traces/core_12/: p0.trace  p1.trace  p10.trace  p11.trace  p2.trace  p3.trace  p4.trace  p5.trace  p6.trace  p7.trace  p8.trace  p9.trace
tests/common/: test_config.cpp  test_program_manifest.cpp  test_sync_coordinator.cpp  test_trace.cpp
tests/full/: test_cli_dispatch.cpp  test_full_mode.cpp
tests/ooo/: test_multi_thread.cpp  test_ooo_basic.cpp
tests/predictor/: test_predictors.cpp  test_proj2_regression.cpp
tests/predictor/fixtures/proj2/: README.md  branchsim.champsimtrace  branchsim.expected.txt  make_trace.py
tests/tools/: test_gen_trace.cpp  test_proj2_to_champsim.cpp
tools/: CMakeLists.txt
tools/casim_synth/: CMakeLists.txt  casim_synth.cpp  casim_synth.hpp
tools/casim_synth/programs/: dot_product.cpp  lock_chain.cpp  lock_chain_memheavy.cpp  producer_consumer.cpp
tools/gen_trace/: CMakeLists.txt  gen_trace.cpp  gen_trace.hpp  main.cpp
tools/proj2_to_champsim/: CMakeLists.txt  main.cpp  proj2_to_champsim.cpp  proj2_to_champsim.hpp
